Added Square output directories

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,6 @@
 numix-circle.icns/
 numix-icon-theme-circle/
 com.numix.icons_circle/
+numix-square.icns/
+numix-icon-theme-square/
+com.numix.icons_square/
