--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,7 @@ before_install:
     - sudo apt-get -y update
     - sudo apt-get install -y python3-pip python3-gi python3-gobject gir1.2-gtk-3.0 libgtk-3-dev libgirepository1.0-dev
 install:
-    - sudo pip3 install cairosvg pylint
+    - sudo pip3 install --upgrade pip
+    - sudo pip3 install cairosvg pylint jsonschema
 script:
     - ./tests/pylint.sh
