--- a/.travis.yml
+++ b/.travis.yml
@@ -9,8 +9,8 @@ before_install:
     - sudo apt-get -y update
     - sudo apt-get install -y python3-pip python3-gi python3-gobject gir1.2-gtk-3.0 libgtk-3-dev libgirepository1.0-dev
 install:
-    - pip3 install --user --upgrade pip
-    - pip3 install --user cairosvg pylint jsonschema
+    - pip3 install --upgrade pip
+    - pip3 install cairosvg pylint jsonschema
 script:
     - sh ./tests/pylint.sh
     - python3 ./tests/schema.py
