--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ before_install:
     - sudo apt-get install -y python3-pip python3-gi python3-gobject gir1.2-gtk-3.0 libgtk-3-dev libgirepository1.0-dev
 install:
     - pip3 install --upgrade pip
-    - pip3 install cairosvg pylint jsonschema
+    - pip3 install cairosvg pep8 jsonschema
 script:
-    - sh ./tests/pylint.sh
+    - sh ./tests/pep8.sh
     - python3 ./tests/schema.py
