--- a/.travis.yml
+++ b/.travis.yml
@@ -15,3 +15,4 @@ script:
     - sh ./tests/pep8.sh
     - python3 ./tests/schema.py
     - python3 ./tests/db_entry.py
+    - python3 ./tests/icon_entry.py
