add db entry existence verification (#3988)
* add db entry existance verification

* fix pep8 styles

--- a/.travis.yml
+++ b/.travis.yml
@@ -14,4 +14,5 @@ install:
 script:
     - sh ./tests/pep8.sh
     - python3 ./tests/schema.py
+    - python3 ./tests/db_entry.py
     - python3 ./tests/icons_entry.py
