--- a/.travis.yml
+++ b/.travis.yml
@@ -10,9 +10,10 @@ before_install:
     - sudo apt-get install -y python3-pip python3-gi python3-gobject gir1.2-gtk-3.0 libgtk-3-dev libgirepository1.0-dev
 install:
     - pip3 install --upgrade pip
-    - pip3 install cairosvg pep8 jsonschema
+    - pip3 install cairosvg pycodestyle jsonschema
 script:
-    - sh ./tests/pep8.sh
+    - sh ./tests/pycodestyle.sh
     - python3 ./tests/schema.py
     - python3 ./tests/db_entry.py
     - python3 ./tests/icons_entry.py
+    - python3 ./tests/ordered_db.py
