--- a/.travis.yml
+++ b/.travis.yml
@@ -1,16 +1,11 @@
-dist: trusty
 sudo: required
 language: python
-python:
-    - 3.4_with_system_site_packages
+services:
+  - docker
 branches:
     - master
 before_install:
-    - sudo apt-get -y update
-    - sudo apt-get install -y python3-pip python3-gi python3-gobject gir1.2-gtk-3.0 libgtk-3-dev libgirepository1.0-dev
-install:
-    - pip3 install --upgrade pip
-    - pip3 install cairosvg pycodestyle jsonschema
+  - docker pull numix-core/numix-core-devel
 script:
     - sh ./tests/pycodestyle.sh
     - python3 ./tests/schema.py
