--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ branches:
     - master
 before_install:
   - docker pull bilelmoussaoui/numix-core-devel
-  - docker run -d --name tests numix-core-devel
+  - docker run -d --name tests bilelmoussaoui/numix-core-devel
 script:
     - docker exec tests sh ./tests/pycodestyle.sh
     - docker exec tests python3 ./tests/schema.py
