add the test to Travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -17,3 +17,4 @@ script:
     - python3 ./tests/db_entry.py
     - python3 ./tests/icons_entry.py
     - python3 ./tests/ordered_db.py
+    - python3 ./tests/icon_cache.py
